--- a/dos-and-donts.html
+++ b/dos-and-donts.html
@@ -155,8 +155,8 @@
                             go through thermal screening test.
                         </li>
                         <li>
-                            Prohibition of visitation of young
-                            children and the elderly in the temple.
+                            Pilgrims below 10 years and above 65 years and pregnant women will not
+be allowed.
                         </li>
 
                         <li>
@@ -192,9 +192,9 @@
 
                     <div class="quickLinks">
                         
-                        <a href="#" style="color:#ba0405;">Temple Timings</a><br>
+                        <!-- <a href="#" style="color:#ba0405;">Temple Timings</a><br> -->
                         <a href="how-to-reach.html" style="color:#ba0405;" target="blank">How to Reach Temple</a><br>
-                        <a href="#" style="color:#ba0405;">Facilities to Pilgrims</a><br>
+                        <!-- <a href="#" style="color:#ba0405;">Facilities to Pilgrims</a><br> -->
                         <a href="dos-and-donts.html" style="color:#ba0405;">Do's and Dont's</a><br>
                         
 
@@ -215,8 +215,8 @@
                             <a href="https://t.me/Sri_Surya_Naryana_Swamy_Mamidada" target="blank"><img
                                     src="images/icons/telegram red.jpg" height="51px" width="51px"
                                     style=" border-radius: 50%;"></a>&nbsp;
-                            <a href="#" target="blank"><img src="images/icons/facebook.png"></a>&nbsp;
-                            <a href="#" target="blank"><img src="images/icons/youtube.png"></a>
+                            <!-- <a href="#" target="blank"><img src="images/icons/facebook.png"></a>&nbsp;
+                            <a href="#" target="blank"><img src="images/icons/youtube.png"></a> -->
                         </div>
 
 
@@ -239,7 +239,7 @@
 
     <footer class="bg-danger text-center">
         <p class="footer-text-color p-1 m-0">
-            © 2020 <span id="year"></span> Sri Surya Narayna Swamy Vari Devasthanam | All Rights Reserved | Designed
+            © 2021 <span id="year"></span> Sri Surya Narayna Swamy Vari Devasthanam | All Rights Reserved | Designed
             By<a href="#"></a> KNEWTRONS</p>
     </footer>
     <script>
