--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <!--my style css  -->
     <link rel="stylesheet" href="css/style.css">
     <!-- animate.css -->
-    <link rel="stylesheet" href="css/animate.css">
+    <!-- <link rel="stylesheet" href="css/animate.css"> -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -188,12 +188,12 @@
                 <div class="row">
 
                     <div id="gallery" class="container">
-                        <img src="images/god/god1.jpg" class="card img-responsive">
-                        <img src="images/god/god2.jpg" class="card img-responsive">
-                        <img src="images/god/god3.jpg" class="card img-responsive">
+                        <img src="images/god/god1.jpg" class="card img-responsive" alt="god image">
+                        <img src="images/god/god2.jpg" class="card img-responsive" alt="god image">
+                        <img src="images/god/god3.jpg" class="card img-responsive" alt="god image">
 
-                        <img src="images/god/view1.JPG" class="card img-responsive">
-                        <img src="images/god/view2.jpg" class="card img-responsive">
+                        <img src="images/god/view1.JPG" class="card img-responsive" alt="god image"> 
+                        <img src="images/god/view2.jpg" class="card img-responsive" alt="god image">
                     </div>
 
 
@@ -205,7 +205,7 @@
                 <h1>Videos </h1>
                 <h5>Videos related to:Temple videos, Vartham, & Pooja.</h5>
                 <div class="row">
-                    <div class="col-lg-6 col-sm-12 p-1">
+                    <div class="col-6 p-1">
 
                         <!-- <video src="images/media/d5news01-02-2020.mp4" controls
                             style="width:500px; height: auto ;"></video> -->
@@ -216,7 +216,7 @@
 
                     </div>
 
-                    <div class="col-lg-6  col-sm-12 p-1">
+                    <div class="col-6 p-1">
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe width="515" height="386" src="https://www.youtube.com/embed/ZWpH8p-4Lqk"
                                 frameborder="1"
@@ -233,15 +233,15 @@
                 <h5>Media related to: VIP's visted to The Temple, Press notes/ Pics, Youtubelinks, </h5>
                 <div class="row">
                     <div id="gallery" class="container">
-                        <img src="images/gallery/1.jpg" class="card img-responsive">
-                        <img src="images/gallery/2.jpg" class="card img-responsive">
-                        <img src="images/gallery/3.jpg" class="card img-responsive">
-                        <img src="images/gallery/4.jpg" class="card img-responsive">
-                        <img src="images/gallery/5.jpg" class="card img-responsive">
-                        <img src="images/gallery/6.jpg" class="card img-responsive">
-                        <img src="images/gallery/7.jpg" class="card img-responsive">
-                        <img src="images/gallery/8.jpg" class="card img-responsive">
-                        <img src="images/gallery/9.jpg" class="card img-responsive">
+                        <img src="images/gallery/1.jpg" class="card img-responsive" alt="god image">
+                        <img src="images/gallery/2.jpg" class="card img-responsive" alt="god image">
+                        <img src="images/gallery/3.jpg" class="card img-responsive"alt="god image">
+                        <img src="images/gallery/4.jpg" class="card img-responsive" alt="god image">
+                        <img src="images/gallery/5.jpg" class="card img-responsive"alt="god image">
+                        <img src="images/gallery/6.jpg" class="card img-responsive"alt="god image">
+                        <img src="images/gallery/7.jpg" class="card img-responsive" alt="god image">
+                        <img src="images/gallery/8.jpg" class="card img-responsive"alt="god image">
+                        <img src="images/gallery/9.jpg" class="card img-responsive" alt="god image">
 
 
                     </div>
@@ -294,15 +294,13 @@
 
                     <div class="quickLinks">
                         
-                        <a href="#" style="color:#ba0405;">Temple Timings</a><br>
+                        <!-- <a href="#" style="color:#ba0405;">Temple Timings</a><br> -->
                         <a href="how-to-reach.html" style="color:#ba0405;" target="blank">How to Reach Temple</a><br>
-                        <a href="#" style="color:#ba0405;">Facilities to Pilgrims</a><br>
+                        <!-- <a href="#" style="color:#ba0405;">Facilities to Pilgrims</a><br> -->
                         <a href="dos-and-donts.html" style="color:#ba0405;">Do's and Dont's</a><br>
                         
 
                     </div>
-
-
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 p-5 ">
@@ -319,8 +317,8 @@
                             <a href="https://t.me/Sri_Surya_Naryana_Swamy_Mamidada" target="blank"><img
                                     src="images/icons/telegram red.jpg" height="51px" width="51px"
                                     style=" border-radius: 50%;"></a>&nbsp;
-                            <a href="#" target="blank"><img src="images/icons/facebook.png"></a>&nbsp;
-                            <a href="#" target="blank"><img src="images/icons/youtube.png"></a>
+                            <!-- <a href="#" target="blank"><img src="images/icons/facebook.png"></a>&nbsp;
+                            <a href="#" target="blank"><img src="images/icons/youtube.png"></a> -->
                         </div>
 
 
@@ -343,7 +341,7 @@
 
     <footer class="bg-danger text-center">
         <p class="footer-text-color p-1 m-0">
-            © 2020 <span id="year"></span> Sri Surya Narayna Swamy Vari Devasthanam | All Rights Reserved | Designed
+            © 2021 <span id="year"></span> Sri Surya Narayna Swamy Vari Devasthanam | All Rights Reserved | Designed
             By<a href="#"></a> KNEWTRONS</p>
     </footer>
 
