--- a/index.html
+++ b/index.html
@@ -180,14 +180,16 @@
                     <h2>About Founder </h2>
 
                     <p class="telugu text-left">
-                        శ్రీ కొవ్వూరి బసివిరెడ్డిగారు, గోదావరి జిల్లాలో మామిడాడ గ్రామము న 1852 వ సంవత్సరమున
-                        జన్మించెను.
-                        శ్రీ కొవ్వూరి బసివిరెడ్డిగారు చిన్న రైతుగా జీవితం మొదలుపెట్టి,తమ తెలివితేటలతో మరియు
-                        దైవానుగ్రహం తో వ్యవసాయ వాణిజ్యములందు ఆరితేరినవారై అనేకమైన భూములు, సంపదలు
-                        సంపాదించుటయేగాక వాటిని వితరణ చేసిన దానశీలురు, గృహదానము, వస్త్రదానము, అన్నదానము, బావులు
+                        శ్రీ కొవ్వూరి బసివిరెడ్డిగారు వ్యవసాయ వాణిజ్యములందు ఆరితేరినవారై అనేకమైన భూములు,
+                        సంపదలు
+                        సంపాదించుటయేగాక వాటిని నితరణ చేసిన దానశీలురు. గృహదానము, వస్త్రదానము, అన్నదానము. బావులు
                         త్రవ్వించుట, వనములు పెంచుట, దేవాలయ నిర్మాణము, అగ్రహారముల నిర్మాణము, అపత్యప్రార్తి,
-                        నిధినిక్షేపముల ఏర్పాటు, సంత్కృతిన పొందుట మొదలైన సప్తసంతినముల బడసిన మహనీయులు శ్రీ
-                        బసివిరెడ్డి గారు.
+                        నిధినిక్షేపముల ఏర్పాటు, సంతృతిన పొందుట
+                        మొదలైన బడసిన మహనీయులు శ్రీ బసివిరెడ్డి గారు, శ్రీ బసివిరెడ్డి గారి సప్తసంతినముల
+                        అన్నదానమునకు
+                        నిదర్శవముగా క్రీ.శ. 1897 లో బ్రిటిష్ మహారాణి ప్రశంసించి పంపిన పత్రము నేటికిని కలదు
+                        కుతుకులూరు, కాకినాడ, గొల్లలమామిడాడ, గండ్రేడు, నిడదవోలు
+                        బసివిరెడ్డి పేటలే ఆయన కీర్తికి దర్పణములు.
                     </p>
                     <a href="about-founder.html">Read more &rarr; </a>
                 </div>
@@ -221,18 +223,13 @@
 
                     <div class="quickLinks">
                         
-                        <a href="#" style="color:#ba0405;">Temple Timings</a><br>
+                        <!-- <a href="#" style="color:#ba0405;">Temple Timings</a><br> -->
                         <a href="how-to-reach.html" style="color:#ba0405;" target="blank">How to Reach Temple</a><br>
-                        <a href="#" style="color:#ba0405;">Facilities to Pilgrims</a><br>
+                        <!-- <a href="#" style="color:#ba0405;">Facilities to Pilgrims</a><br> -->
                         <a href="dos-and-donts.html" style="color:#ba0405;">Do's and Dont's</a><br>
                         
 
                     </div>
-
-
-
-
-
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 p-5 ">
@@ -240,7 +237,8 @@
                     <div>
                         <h3>LISTEN AUDIO:</h3>
                         <div>
-                            <audio src="audio/Surya Ashtakam.mp3" controls loop="loop" preload id="my_audio"></audio>
+                            <audio src="audio/Surya Ashtakam.mp3" controls loop="loop" autoplay preload
+                                id="my_audio"></audio>
                         </div>
                         <br>
                         <h3>FOLLOW US:</h3>
@@ -248,8 +246,8 @@
                             <a href="https://t.me/Sri_Surya_Naryana_Swamy_Mamidada" target="blank"><img
                                     src="images/icons/telegram red.jpg" height="51px" width="51px"
                                     style=" border-radius: 50%;"></a>&nbsp;
-                            <a href="#" target="blank"><img src="images/icons/facebook.png"></a>&nbsp;
-                            <a href="#" target="blank"><img src="images/icons/youtube.png"></a>
+                            <!-- <a href="#" target="blank"><img src="images/icons/facebook.png"></a>&nbsp;
+                            <a href="#" target="blank"><img src="images/icons/youtube.png"></a> -->
                         </div>
 
 
@@ -269,10 +267,9 @@
 
 
 
-
     <footer class="bg-danger text-center">
         <p class="footer-text-color p-1 m-0">
-            © 2020 <span id="year"></span> Sri Surya Narayna Swamy Vari Devasthanam | All Rights Reserved | Designed
+            © 2021 <span id="year"></span> Sri Surya Narayna Swamy Vari Devasthanam | All Rights Reserved | Designed
             By<a href="#"></a> KNEWTRONS</p>
     </footer>
 
