--- a/about-founder.html
+++ b/about-founder.html
@@ -95,11 +95,12 @@
         <!-- Nav tabs -->
         <ul class="nav nav-tabs justify-content-center">
             <li class="nav-item">
-                <a class="nav-link active" href="#telugu">Telugu</a>
+                <a class="nav-link active" href="#english">English</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#english">English</a>
+                <a class="nav-link " href="#telugu">Telugu</a>
             </li>
+
             <!-- <li class="nav-item">
                 <a class="nav-link" href="#media">Media Coverage</a>
             </li> -->
@@ -107,47 +108,7 @@
 
         <!-- Tab panes -->
         <div class="tab-content">
-            <div id="telugu" class="container tab-pane active telugu"><br>
-                <h1 class=" text-center"><b><u>“అన్నదాత" కొవ్వూరి బసివిరెడ్డిగారి “ జీవిత సంగ్రహము"</u></b></h1>
-                <div class="row">
-
-                    <div class="col-lg-4 col-sm-12 text-center">
-                        <img src="images/basivireddy.png" alt="founder image" style="width: 290px; height: auto; ">
-                    </div>
-                    <!-- <div class="col-1"></div> -->
-                    <div class="col-lg-8 col-sm-12 text-justify ">
-                        <p>శ్రీ కొవ్వూరి బసివిరెడ్డిగారు, గోదావరి జిల్లాలో మామిడాడ గ్రామము న 1852 వ సంవత్సరమున
-                            జన్మించెను.
-                            శ్రీ కొవ్వూరి బసివిరెడ్డిగారు చిన్న రైతుగా జీవితం మొదలుపెట్టి,తమ తెలివితేటలతో మరియు
-                            దైవానుగ్రహం తో వ్యవసాయ వాణిజ్యములందు ఆరితేరినవారై అనేకమైన భూములు, సంపదలు
-                            సంపాదించుటయేగాక వాటిని వితరణ చేసిన దానశీలురు, గృహదానము, వస్త్రదానము, అన్నదానము, బావులు
-                            త్రవ్వించుట, వనములు పెంచుట, దేవాలయ నిర్మాణము, అగ్రహారముల నిర్మాణము, అపత్యప్రార్తి,
-                            నిధినిక్షేపముల ఏర్పాటు, సంత్కృతిన పొందుట మొదలైన సప్తసంతినముల బడసిన మహనీయులు శ్రీ
-                            బసివిరెడ్డి గారు.</p>
-                        <p>కుతుకులూరు, కాకినాడ, గొల్లలమామిడాడ, గండ్రేడు, నిడదవోలు బసివిరెడ్డి పేటలే ఆయన కీర్తికి
-                            దర్పణములు. శ్రీకాకుళము, విజయనగరము, విశాఖపట్టణము, ఉభయగోదావరి జిల్లాలలో అనేకమున బావులు
-                            త్రవ్వించుట, సత్రములు కట్టించుట జరిగినది. శ్రీ కొవ్వూరి బసివిరెడ్డి గారు గొల్లలమామిడాడలో
-                            1902 జూన్ మాసంలో
-                            నిర్మించిన శ్రీ సూర్యనారాయణ స్వామి దేవాలయము, ఆంధ్రదేశములోనే వన్నెకెక్కినది .</p>
-                        <p>శ్రీమాన్ కొవ్వూరి బసివిరెడ్డిగారు తన జీవితకాలంలో సామర్లకోటలో పెద్ద సత్రము నిర్మించి విశేష
-                            అన్నదానము చేసినారు.నిత్యాన్నదానము కొనసాగింపబడుతున్న సామర్లకోటలోని శ్రీ బసివిరెడ్డిగారి
-                            సత్రము ఆయన దాతృత్వమునకు నిదర్శనము.
-                            కాకినాడలో ఉన్న కుళాయి చెరువుకు రూ. 10 వేలు విరాళంగా ఇచ్చి జలదాతగా
-                            అనేకమైన నూతులు తవ్వించినారు. తూర్పు, పశ్చిమ గోదావరి జిల్లాల్లో అనేక గ్రామాల్లో గృహనిర్మాణం
-                            కొరకు ఇళ్ళస్థలాలు (బసివిరెడ్డి పేటలు కలవు) ఇచ్చినారు. వీరి దాతృత్వమునకు | విక్టోరియా
-                            మహారాణిచే 18వ శతాబ్దమునే అన్నదాత అను బిరుదు పొందినారు. వీరికి ఎంఎస్ఎస్ ఛార్టీస్ వారు
-                            జీవితకాల సభ్యత్వము అందజేసినారు. నేటికిని వారు చేసిన సేవా కార్యక్రమాలు కులమతాలకు అతీతంగా
-                            ఆహారం, నీరు, వస్త్రాలు అందజేసినారు. ఉభయగోదావరి జిల్లాల్లో ఉన్న వీరి కులస్తులు భూమంచి
-                            రెడ్డిలు, ఉన్నత స్థితికి పాటుపడినారు.శ్రీ కొవ్వూరి బసివిరెడ్డిగారు 1915 వ సంవత్సరమున
-                            స్వర్గస్తులయ్యారు. వీరి చరిత్రను ఓలేటి పార్వతీశం కవులు పద్యరూపంగా
-                            అందించగా దానిని శ్రీ ఓలేటి శ్రీరామచంద్రమూర్తిగారు వచనరూపంలోకి తెచ్చినారు. నేటికిని
-                            బసివిరెడ్డిగారి జీవితచరిత్రలో విక్టోరియా | మహారాణి అందజేసిన అన్నదాత ప్రశంసాపత్రాన్ని ముద్రణ
-                            రూపంలో చూడవచ్చు.</p>
-                    </div>
-                </div>
-
-            </div>
-            <div id="english" class="container tab-pane fade"><br>
+            <div id="english" class="container tab-pane active "><br>
                 <h1 class=" text-center"><b><u>Founder Shri.Kovvuri Basivi Reddy Garu</u></b></h1>
                 <div class="row">
 
@@ -156,28 +117,57 @@
                     </div>
                     <!-- <div class="col-1"></div> -->
                     <div class="col-lg-8 col-sm-12 text-justify ">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quos nihil earum odio possimus,
-                            fugiat provident itaque debitis laboriosam aut dolor repellat sint alias omnis explicabo
-                            blanditiis expedita quidem. Tempora?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident iste fuga labore unde
-                            repudiandae dolores velit mollitia. Error quae aliquid quia voluptatibus. Aliquid, libero.
-                            Deleniti quibusdam debitis fugiat quis voluptates?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident iste fuga labore unde
-                            repudiandae dolores velit mollitia. Error quae aliquid quia voluptatibus. Aliquid, libero.
-                            Deleniti quibusdam debitis fugiat quis voluptates?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident iste fuga labore unde
-                            repudiandae dolores velit mollitia. Error quae aliquid quia voluptatibus. Aliquid, libero.
-                            Deleniti quibusdam debitis fugiat quis voluptates?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident iste fuga labore unde
-                            repudiandae dolores velit mollitia. Error quae aliquid quia voluptatibus. Aliquid, libero.
-                            Deleniti quibusdam debitis fugiat quis voluptates?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident iste fuga labore unde
-                            repudiandae dolores velit mollitia. Error quae aliquid quia voluptatibus. Aliquid, libero.
-                            Deleniti quibusdam debitis fugiat quis voluptates?</p>
+                        <p>Mr. Kovvuri Basivireddy was a philanthropist who acquired a large amount of land and wealth
+                            while cultivating it in the agri-business. Home donation, clothing donation, food donation.
+                            Digging of wells, afforestation, construction of temples, construction of agraharams,
+                            apathyaprapti, setting up of treasures, acquisition of satiety, etc. A letter of
+                            appreciation sent by the British Queen in 1897 is still found today at Kuthukuluru,
+                            Kakinada, Gollalamamidada, Gandredu. Nidadavolu Basivireddy Petale is the mirror of his
+                            fame. Many wells were dug and inns were built in Srikakulam, Vijayanagaram, Visakhapatnam
+                            and Ubhaya Godavari districts. Sri Suryanarayana Swamy Temple was built by Sri Kovvuri
+                            Basivireddy at Gollalamamidada, is one of the largest temples in Andhra Pradesh. The Sri
+                            Basivi Reddy Gari Satra in Samarlakota, where the Nithyannadanam is being continued, is a
+                            testament to his generosity.</p>
+                            <img src="images/victoria certificate.jpg" alt="term and conditions image" style=" max-width: 100%;
+                                height: auto;">
 
                     </div>
                 </div>
             </div>
+            <div id="telugu" class="container tab-pane  telugu fade"><br>
+                <h1 class=" text-center"><b><u>“అన్నదాత" శ్రీ కొవ్వూరి బసివిరెడ్డిగారు (1852 - 1915)</u></b></h1>
+                <div class="row">
+
+                    <div class="col-lg-4 col-sm-12 text-center">
+                        <img src="images/basivireddy.png" alt="founder image" style="width: 290px; height: auto; ">
+                    </div>
+                    <!-- <div class="col-1"></div> -->
+                    <div class="col-lg-8 col-sm-12 ">
+                        <p> <b>&nbsp; శ్రీ కొవ్వూరి బసివిరెడ్డిగారు వ్యవసాయ వాణిజ్యములందు ఆరితేరినవారై అనేకమైన భూములు,
+                                సంపదలు
+                                సంపాదించుటయేగాక వాటిని నితరణ చేసిన దానశీలురు. గృహదానము, వస్త్రదానము, అన్నదానము. బావులు
+                                త్రవ్వించుట, వనములు పెంచుట, దేవాలయ నిర్మాణము, అగ్రహారముల నిర్మాణము, అపత్యప్రార్తి,
+                                నిధినిక్షేపముల ఏర్పాటు, సంతృతిన పొందుట
+                                మొదలైన బడసిన మహనీయులు శ్రీ బసివిరెడ్డి గారు, శ్రీ బసివిరెడ్డి గారి సప్తసంతినముల
+                                అన్నదానమునకు
+                                నిదర్శవముగా క్రీ.శ. 1897 లో బ్రిటిష్ మహారాణి ప్రశంసించి పంపిన పత్రము నేటికిని కలదు
+                                కుతుకులూరు, కాకినాడ, గొల్లలమామిడాడ, గండ్రేడు. నిడదవోలు
+                                బసివిరెడ్డి పేటలే ఆయన కీర్తికి దర్పణములు. శ్రీకాకుళము, విజయనగరము, విశాఖపట్టణము,
+                                ఉభయగోదావరి
+                                జిల్లాలలో అనేకమున బావులు త్రవ్వించుట, సత్రములు కట్టించుట జరిగినది. శ్రీ కొవ్వూరి
+                                బసివిరెడ్డి
+                                గారు గొల్లలమామిడాడలో నిర్మించిన శ్రీ సూర్యనారాయణ స్వామి దేవాలయము, ఆంధ్రదేశములోనే
+                                వన్నెకెక్కినది. నిత్యాన్నదానము కొనసాగింపబడుతున్న సామర్లకోటలోని శ్రీ బసివిరెడ్డిగారి
+                                సత్రము
+                                ఆయన దాతృత్వమునకు నిదర్శనము. </b>
+                        </p>
+                        <img src="images/victoria certificate.jpg" alt="term and conditions image" style=" max-width: 100%;
+                                height: auto;">
+                    </div>
+                </div>
+
+            </div>
+
 
 
         </div>
@@ -193,9 +183,9 @@
 
                     <div class="quickLinks">
                         
-                        <a href="#" style="color:#ba0405;">Temple Timings</a><br>
+                        <!-- <a href="#" style="color:#ba0405;">Temple Timings</a><br> -->
                         <a href="how-to-reach.html" style="color:#ba0405;" target="blank">How to Reach Temple</a><br>
-                        <a href="#" style="color:#ba0405;">Facilities to Pilgrims</a><br>
+                        <!-- <a href="#" style="color:#ba0405;">Facilities to Pilgrims</a><br> -->
                         <a href="dos-and-donts.html" style="color:#ba0405;">Do's and Dont's</a><br>
                         
 
@@ -216,8 +206,8 @@
                             <a href="https://t.me/Sri_Surya_Naryana_Swamy_Mamidada" target="blank"><img
                                     src="images/icons/telegram red.jpg" height="51px" width="51px"
                                     style=" border-radius: 50%;"></a>&nbsp;
-                            <a href="#" target="blank"><img src="images/icons/facebook.png"></a>&nbsp;
-                            <a href="#" target="blank"><img src="images/icons/youtube.png"></a>
+                            <!-- <a href="#" target="blank"><img src="images/icons/facebook.png"></a>&nbsp;
+                            <a href="#" target="blank"><img src="images/icons/youtube.png"></a> -->
                         </div>
 
 
@@ -238,9 +228,10 @@
 
 
 
+
     <footer class="bg-danger text-center">
         <p class="footer-text-color p-1 m-0">
-            © 2020 <span id="year"></span> Sri Surya Narayna Swamy Vari Devasthanam | All Rights Reserved | Designed
+            © 2021 <span id="year"></span> Sri Surya Narayna Swamy Vari Devasthanam | All Rights Reserved | Designed
             By<a href="#"></a> KNEWTRONS</p>
     </footer>
     <script>
