--- a/contact-us.html
+++ b/contact-us.html
@@ -156,23 +156,24 @@
                                 <h3>Srinivasa Bala Krishna Reddy Kovvuri</h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">Chairman</span></p>
                                 <h6> Contact <i class="fa fa-phone" aria-hidden="true" style=" color: green;"></i> :
-                                    +91-0000000000</h6>
-                                <h6> Mail <i class="fa fa-envelope" aria-hidden="true" style=" color: red;"></i> :
-                                    some@gmail.com</h6>
+                                    +91-9951975260</h6>
+                                <!-- <h6> Mail <i class="fa fa-envelope" aria-hidden="true" style=" color: red;"></i> :
+                                    some@gmail.com</h6> -->
 
                             </div>
 
                             <div class="Contactcard">
-                                <img src="images/contact/blank.jpeg" alt="name" style="width:60%">
-                                <h3>some name</h3>
+                                <img src="images/contact/blank1.jpg" alt="name" style="width:60%">
+                                <h3>
+                                    M. Murali Veerabhadra Rao</h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">Executive Officer</span>
                                 </p>
                                 <!-- <h6><i class="fa fa-phone" aria-hidden="true" style=" color: green;"></i> : +91-0000000000</h6>
                                 <h6> <i class="fa fa-envelope" aria-hidden="true" style=" color: red;"></i> : some@gmail.com</h6> -->
                                 <h6> Contact <i class="fa fa-phone" aria-hidden="true" style=" color: green;"></i> :
-                                    +91-0000000000</h6>
-                                <h6> Mail <i class="fa fa-envelope" aria-hidden="true" style=" color: red;"></i> :
-                                    some@gmail.com</h6>
+                                    +91-9951975260</h6>
+                                <!-- <h6> Mail <i class="fa fa-envelope" aria-hidden="true" style=" color: red;"></i> :
+                                    some@gmail.com</h6> -->
 
 
                             </div>
