--- a/contact-us.html
+++ b/contact-us.html
@@ -153,7 +153,7 @@
 
                             <div class="Contactcard">
                                 <img src="images/contact/chairman.png" alt="name" style="width:60%">
-                                <h3>Srinivasa Bala Krishna Reddy Kovvuri</h3>
+                                <h3>Kovvuri Srinivasa Bala Krishna Reddy </h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">Chairman</span></p>
                                 <h6> Contact <i class="fa fa-phone" aria-hidden="true" style=" color: green;"></i> :
                                     +91-9951975260</h6>
@@ -179,7 +179,7 @@
                             </div>
                             <div class="Contactcard">
                                 <img src="images/contact/pradhna archak.png" alt="name" style="width:60%">
-                                <h3>Rejeti Venkata narasimhacharyulu</h3>
+                                <h3>Rejeti Venkata Narasimhacharyulu</h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">Pradhana Archak</span>
                                 </p>
                                 <h6> Contact <i class="fa fa-phone" aria-hidden="true" style=" color: green;"></i> :
@@ -237,7 +237,7 @@
 
                             <div class="Contactcard">
                                 <img src="images/contact/chairman.png" alt="name" style="width:60%">
-                                <h3>శ్రీనివాస బాలా కృష్ణారెడ్డి కొవ్వూరి</h3>
+                                <h3>కొవ్వూరి శ్రీనివాస బాలకృష్ణారెడ్డి </h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">వంశ పారంపర్య
                                         ధర్మకర్త</span></p>
                                 <h6> ఫోను నంబరు <i class="fa fa-phone" aria-hidden="true" style=" color: green;"></i> :
@@ -265,7 +265,7 @@
 
                             <div class="Contactcard">
                                 <img src="images/contact/pradhna archak.png" alt="name" style="width:60%">
-                                <h3>రేజేటి వెంకట నరసింహచార్యలు</h3>
+                                <h3>రేజేటి వెంకట నరసింహచార్యులు</h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">ప్రధాన అర్చకులు</span>
                                 </p>
                                 <h6> ఫోను నంబరు <i class="fa fa-phone" aria-hidden="true" style=" color: green;"></i> :
