--- a/about-temple.html
+++ b/about-temple.html
@@ -36,10 +36,10 @@
 
     <!-- header with bg -->
     <header>
-        <div class="container-fluid  ">
+        <div class="container-fluid ">
             <div class="row text-center" style="max-height: 200px;">
-                <div class="col-lg-3 col-sm-3 col-3  animate__animated animate__pulse p-1 m-0">
-                    <img src="images/IMG-20200528-WA0000-removebg-preview.png" alt="" class="responsive">
+                <div class="col-lg-3 col-sm-3 col-3  animate__animated animate__pulse ">
+                    <img src="images/IMG-20200528-WA0000-removebg-preview.png" alt="" class="responsive p-1">
                 </div>
                 <div class="col-lg-6 col-sm-6 col-6  text-danger pt-2 m-0 ">
                     <h2 style="font-size:3vw;"> శ్రీ సూర్యనారాయణ స్వామి వారి దేవస్థానం </h2>
@@ -55,6 +55,7 @@
             </div>
         </div>
     </header>
+    <img src="images/sun-tel-header.png" alt="" class="header-image responsive">
     <!-- nav bar start responsive -->
     <!-- nav bar -1 start responsive collapse -->
     <nav class="navbar navbar-expand-md bg-warning navbar-light sticky-top">
@@ -113,13 +114,13 @@
                     </div>
                     <div class="col-lg-1 "></div>
                     <div class="col-lg-8 col-sm-12">
-                        <p>
+                        <p style="color: black;"> 
                             ప్రత్యక్ష భగవానుడైన శ్రీ సూర్యనారాయణస్వామి వారి ఆలయం తూర్పు గోదావరి జిల్లా, గొల్లల
                             మామిడాడలో శ్రీ కొప్వూరి బసివిరెడ్డిగారిచే 1902 జూన్ మాసంలో ( జ్యేష్ట శుద్ధ త్రయోదశి నాడు ప్రతిష్టితమైనది. శ్రీ స్వామివారి ఆలయంలో
                             పాంచారాత్ర ఆగమశాస్త్రం ప్రకారం ఆరాధన జరపబడుతున్నది. జూన్ మాసంలో వార్షిక కల్యాణ మహోత్సవం,
                             తొలి ఏకాదశి, శ్రీకృష్ణ జన్మాష్టమి, విజయదశమి. శమీపూజ, కార్తీక మాసమున క్షీరాబ్ది ద్వాదశి,
                             తెప్పోత్సవం, కృతికా దీపోత్సవం, మార్గశిరమున ధనుర్మాస మహోత్సవము, మకర సంక్రమణము. మాఘమాసంలో
-                            రధసప్తమి, రథోత్సవం, భీష్మ ఏకాదశి, బ్రహ్మోత్సవములు వైభవంగా నిర్వహించబడుచున్నవి. ఈ
+                            రధసప్తమి, రథోత్సవం, భీష్మ ఏకాదశి, బ్రహ్మోత్సవములు వైభవంగా నిర్వహించబడుచున్నవి. <br> ఈ
                             ఆలయమునందు ఉ పాలయములుగా ఉన్న శ్రీ లక్ష్మీ నారాయణ స్వామి, సత్యనారాయణ స్వామివారి వార్షిక
                             కల్యాణ మహోత్సవాలు, వైశాఖ శుద్ధ ఏకాదశి, జ్యేష్టశుద్ధ ఏకాదశిలలో కల్యాణ మహోత్సవాలు, శ్రీ
                             సత్యనారాయణ స్వామివారి ప్రతములు, శ్రావణ శుక్రవార పూజలు, ప్రతి ఆదివారం భక్తులచే శ్రీ స్వామి
