--- a/contact-us.html
+++ b/contact-us.html
@@ -40,12 +40,13 @@
             text-align: center;
             font-family: arial;
             background-color: white;
+            margin-bottom: 10px;
 
         }
 
-        .Contactcard.img {
+        /* .Contactcard.img {
             height: ;
-        }
+        } */
 
         .Contacttitle {
             color: grey;
@@ -65,8 +66,8 @@
     <header>
         <div class="container-fluid ">
             <div class="row text-center" style="max-height: 200px;">
-                <div class="col-lg-3 col-sm-3 col-3  animate__animated animate__pulse p-1">
-                    <img src="images/IMG-20200528-WA0000-removebg-preview.png" alt="" class="responsive">
+                <div class="col-lg-3 col-sm-3 col-3  animate__animated animate__pulse ">
+                    <img src="images/IMG-20200528-WA0000-removebg-preview.png" alt="" class="responsive p-1">
                 </div>
                 <div class="col-lg-6 col-sm-6 col-6  text-danger pt-2 m-0 ">
                     <h2 style="font-size:3vw;"> శ్రీ సూర్యనారాయణ స్వామి వారి దేవస్థానం </h2>
@@ -82,7 +83,7 @@
             </div>
         </div>
     </header>
-
+    <img src="images/sun-tel-header.png" alt="" class="header-image responsive">
     <!-- nav bar start responsive -->
     <!-- nav bar -1 start responsive collapse -->
     <nav class="navbar navbar-expand-md bg-warning navbar-light sticky-top">
@@ -137,7 +138,7 @@
 
                 </a>
             </li>
-           
+
             <!-- <li class="nav-item">
                 <a class="nav-link" href="#media">Media Coverage</a>
             </li> -->
@@ -147,23 +148,23 @@
         <div class="tab-content">
             <div id="english" class="container tab-pane  active"><br>
                 <div class="container">
-                    <h1 class="text-center"><b><u>CONTACT US</u></b></h1>
-                    <div class="row">
+                    <h1 class="text-center text-success "><b><u>CONTACT US</u></b></h1>
+                    <div class="row ">
                         <div class="card-deck col-12">
 
-                            <div class="Contactcard">
-                                <img src="images/contact/chairman.png" alt="name" style="width:60%">
-                                <h3>Kovvuri Srinivasa Bala Krishna Reddy </h3>
+                            <div class="Contactcard  ">
+                                <img src="images/contact/chairman.jpeg" alt="name" style="width:60%" class="p-2">
+                                <h3>Kovvuri Srinivasa Balakrishna Reddy </h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">Chairman</span></p>
                                 <h6> Contact <i class="fa fa-phone" aria-hidden="true" style=" color: green;"></i> :
-                                    +91-9951975260</h6>
+                                </h6>
                                 <!-- <h6> Mail <i class="fa fa-envelope" aria-hidden="true" style=" color: red;"></i> :
                                     some@gmail.com</h6> -->
 
                             </div>
 
-                            <div class="Contactcard">
-                                <img src="images/contact/blank1.jpg" alt="name" style="width:60%">
+                            <div class="Contactcard  ">
+                                <img src="images/contact/blank.jpeg" alt="name" style="width:60%" class="p-2">
                                 <h3>
                                     M. Murali Veerabhadra Rao</h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">Executive Officer</span>
@@ -177,8 +178,8 @@
 
 
                             </div>
-                            <div class="Contactcard">
-                                <img src="images/contact/pradhna archak.png" alt="name" style="width:60%">
+                            <div class="Contactcard ">
+                                <img src="images/contact/pbg.png" alt="name" style="height: 180px; width: 180px;" class="p-2">
                                 <h3>Rejeti Venkata Narasimhacharyulu</h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">Pradhana Archak</span>
                                 </p>
@@ -186,12 +187,12 @@
                                     +91-9866742774</h6>
                                 <!-- <h6> Mail <i class="fa fa-envelope" aria-hidden="true" style=" color: red;"></i> :
                                     some@gmail.com</h6> -->
-                                    <h6> :
-                                        +91-9985344591</h6>
-                                    <h6> :
-                                        +91-9959675555</h6>
-                                    <h6> :
-                                        +91-8897040444</h6>
+                                <h6> :
+                                    +91-9985344591</h6>
+                                <h6> :
+                                    +91-9959675555</h6>
+                                <h6> :
+                                    +91-8897040444</h6>
                             </div>
 
                         </div>
@@ -204,10 +205,10 @@
 
                 </div>
                 <div class="container">
-                    <div class="row pt-1">
+                    <div class="row p-2">
                         <div class="col-12">
-                            <h4><b> For More Information Contact: </b>  <span> 9701462666 ,</span> <span> 9989845776 , </span>
-                                <span> 9908401231.</span>
+                            <h4 class="text-center"><b> For More Information Contact : </b> <span> Kovvuri Srinivasa Reddy</span> : <span>
+                                    9701462666 ,</span> <br> <span> Subrahmanyeswara Reddy :</span>  <span> 9989845776 </span>
                             </h4>
                             <iframe
                                 src="https://docs.google.com/forms/d/e/1FAIpQLSf2mQlv5Ep1sme9O_v1sIyl72I_ggzRKZh6VSd3Hv_8TwlDlw/viewform?embedded=true"
@@ -231,24 +232,24 @@
             </div>
             <div id="telugu" class="container tab-pane fade "><br>
                 <div class="container">
-                    <h1 class="text-center"><b><u>సంప్రదించండి</u></b></h1>
-                    <div class="row">
+                    <h1 class="text-center text-success"><b><u>సంప్రదించండి</u></b></h1>
+                    <div class="row ">
                         <div class="card-deck col-12">
 
-                            <div class="Contactcard">
-                                <img src="images/contact/chairman.png" alt="name" style="width:60%">
+                            <div class="Contactcard  ">
+                                <img src="images/contact/chairman.jpeg" alt="name" style="width:60%" class="p-2">
                                 <h3>కొవ్వూరి శ్రీనివాస బాలకృష్ణారెడ్డి </h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">వంశ పారంపర్య
                                         ధర్మకర్త</span></p>
                                 <h6> ఫోను నంబరు <i class="fa fa-phone" aria-hidden="true" style=" color: green;"></i> :
-                                    +91-9951975260</h6>
+                                </h6>
                                 <!-- <h6> మెయిల్ <i class="fa fa-envelope" aria-hidden="true" style=" color: red;"></i> :
                                     some@gmail.com</h6> -->
 
                             </div>
 
-                            <div class="Contactcard">
-                                <img src="images/contact/blank1.jpg" alt="name" style="width:60%">
+                            <div class="Contactcard  ">
+                                <img src="images/contact/blank.jpeg" alt="name" style="width:60%" class="p-2">
                                 <h3>ఎమ్. మురళీ వీరభద్రరావు
                                 </h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">కార్యనిర్వాహణ
@@ -263,8 +264,8 @@
 
                             </div>
 
-                            <div class="Contactcard">
-                                <img src="images/contact/pradhna archak.png" alt="name" style="width:60%">
+                            <div class="Contactcard  ">
+                                <img src="images/contact/pbg.png" alt="name" style="width:180px; height: 180px" class="p-2">
                                 <h3>రేజేటి వెంకట నరసింహచార్యులు</h3>
                                 <p class="title"> <span class="badge badge-pill badge-primary">ప్రధాన అర్చకులు</span>
                                 </p>
@@ -298,10 +299,10 @@
 
 
                 <div class="container">
-                    <div class="row pt-1">
-                        <div class="col-12">
-                            <h4><b> వివరములకు సంప్రదించండి: </b>  <span> 9701462666 ,</span> <span> 9989845776 , </span>
-                                <span> 9908401231.</span>
+                    <div class="row p-2">
+                        <div class="col-12 ">
+                            <h4 class="text-center"><b> వివరములకు సంప్రదించండి : </b>  <span>కొవ్వూరి శ్రీనివాస రెడ్డి :</span> &nbsp;<span>
+                                9701462666 ,</span>   <br> <span> సుబ్రహ్మణేశ్వర రెడ్డి :</span> <span> 9989845776 </span> 
                             </h4>
                             <iframe
                                 src="
