--- a/gallery.html
+++ b/gallery.html
@@ -110,8 +110,8 @@
     <header>
         <div class="container-fluid ">
             <div class="row text-center" style="max-height: 200px;">
-                <div class="col-lg-3 col-sm-3 col-3  animate__animated animate__pulse p-1">
-                    <img src="images/IMG-20200528-WA0000-removebg-preview.png" alt="" class="responsive">
+                <div class="col-lg-3 col-sm-3 col-3  animate__animated animate__pulse ">
+                    <img src="images/IMG-20200528-WA0000-removebg-preview.png" alt="" class="responsive p-1">
                 </div>
                 <div class="col-lg-6 col-sm-6 col-6  text-danger pt-2 m-0 ">
                     <h2 style="font-size:3vw;"> శ్రీ సూర్యనారాయణ స్వామి వారి దేవస్థానం </h2>
@@ -127,6 +127,7 @@
             </div>
         </div>
     </header>
+    <img src="images/sun-tel-header.png" alt="" class="header-image responsive">
     <!-- nav bar start responsive -->
     <!-- nav bar -1 start responsive collapse -->
     <nav class="navbar navbar-expand-md bg-warning navbar-light sticky-top">
@@ -205,7 +206,7 @@
                 <h1>Videos </h1>
                 <h5>Videos related to:Temple videos, Vartham, & Pooja.</h5>
                 <div class="row">
-                    <div class="col-6 p-1">
+                    <div class="col-lg-6 col-sm-12 p-1">
 
                         <!-- <video src="images/media/d5news01-02-2020.mp4" controls
                             style="width:500px; height: auto ;"></video> -->
@@ -216,7 +217,7 @@
 
                     </div>
 
-                    <div class="col-6 p-1">
+                    <div class="col-lg-6  col-sm-12 p-1">
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe width="515" height="386" src="https://www.youtube.com/embed/ZWpH8p-4Lqk"
                                 frameborder="1"
