--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <header>
         <div class="container-fluid ">
             <div class="row text-center" style="max-height: 200px;">
-                <div class="col-lg-3 col-sm-3 col-3  animate__animated animate__pulse p-1">
-                    <img src="images/IMG-20200528-WA0000-removebg-preview.png" alt="" class="responsive">
+                <div class="col-lg-3 col-sm-3 col-3  animate__animated animate__pulse ">
+                    <img src="images/IMG-20200528-WA0000-removebg-preview.png" alt="" class="responsive p-1">
                 </div>
                 <div class="col-lg-6 col-sm-6 col-6  text-danger pt-2 m-0 ">
                     <h2 style="font-size:3vw;"> శ్రీ సూర్యనారాయణ స్వామి వారి దేవస్థానం </h2>
@@ -59,6 +59,7 @@
             </div>
         </div>
     </header>
+    <img src="images/sun-tel-header.png" alt="" class="header-image responsive">
     <!-- nav bar start responsive -->
     <!-- nav bar -1 start responsive collapse -->
     <nav class="navbar navbar-expand-md bg-warning navbar-light sticky-top">
