--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <!-- container/ matter start -->
 
-    <div class="container">
+    <div class="container my-3">
 
         <div class="co1-12 ">
             <div class="embed-responsive embed-responsive-16by9">
@@ -217,7 +217,7 @@
     <!-- Quick Links start -->
 
     <div style="background-image: url(images/head.jpg); ">
-        <div class="container">
+        <div class="container mt-4">
             <div class="row text-center">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 p-5 ">
                     <h3>Services</h3>
