pin gallery attach

--- a/gallery.html
+++ b/gallery.html
@@ -196,7 +196,7 @@
                         <img src="images/god/view1.JPG" class="card img-responsive" alt="god image"> 
                         <img src="images/god/view2.jpg" class="card img-responsive" alt="god image">
                     </div>
-
+                    <a data-pin-do="embedBoard" data-pin-board-width="1080" data-pin-scale-height="600" data-pin-scale-width="80" href="https://in.pinterest.com/Krishnareddy9/indian-wedding-invitation-cards/"></a>
 
 
 
@@ -345,7 +345,7 @@
             © 2021 <span id="year"></span> Sri Surya Narayna Swamy Vari Devasthanam | All Rights Reserved | Designed
             By<a href="#"></a> KNEWTRONS</p>
     </footer>
-
+    <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 </body>
 <script>
     // menu script
