--- a/gallery.html
+++ b/gallery.html
@@ -196,8 +196,10 @@
                         <img src="images/god/view1.JPG" class="card img-responsive" alt="god image"> 
                         <img src="images/god/view2.jpg" class="card img-responsive" alt="god image">
                     </div>
+
                     <a data-pin-do="embedBoard" data-pin-board-width="1080" data-pin-scale-height="600" data-pin-scale-width="80" href="https://in.pinterest.com/Krishnareddy9/indian-wedding-invitation-cards/"></a>
 
+                    <a data-pin-do="embedBoard" data-pin-board-width="320" data-pin-scale-height="500" data-pin-scale-width="200" href="https://in.pinterest.com/Krishnareddy9/indian-wedding-invitation-cards/"></a>
 
 
                 </div>
